Readme file and macOS compatibility
Added contents to README.
Added 'test/bin' to '.gitignore'.
Minor tweaks to root CMakelists.txt for macOS compatibility.
Minor tweaks to program constants (turbo::pi).
Continued work on NacaProfileGenerator test.

--- a/.gitignore
+++ b/.gitignore
@@ -42,12 +42,13 @@
 **/CMakeScripts
 **/compile_commands.json
 
-bin/*
-build/*
-doc/html/
-doc/latex/
-include/*
-lib/*
+bin
+build
+test/bin
+doc/html
+doc/latex
+include
+lib
 
 notes*
 *.swp
