--- a/src/geometry/manipulation/CMakeLists.txt
+++ b/src/geometry/manipulation/CMakeLists.txt
@@ -1,21 +1,14 @@
-## turbo - Copyright (C) 2019 P. Milovic
-##
-## See the LICENSE file for license information
+# turbo - Copyright (C) 2019 P. Milovic
 #
-## add include directories
-#set(DIRS
-#	${CMAKE_CURRENT_SOURCE_DIR}
-#	)
-#
-## append to search path
-#set(TURBO_INCLUDE_DIRS
-#	${TURBO_INCLUDE_DIRS};${DIRS} PARENT_SCOPE
-#	)
-#
-## add sources
-#set(SRC
-#	)
-#
-## append to sources
-#file(GLOB HDR RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.h)
-#append_turbo_src(${CMAKE_CURRENT_SOURCE_DIR} "${SRC};${HDR}")
+# See the LICENSE file for license information
+
+# add sources
+set(SRC
+	TranslateAlongVector.cpp
+	TranslateBase.cpp
+	TranslateToPoint.cpp
+	)
+
+# append to sources
+file(GLOB HDR RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.h)
+append_turbo_src(${CMAKE_CURRENT_SOURCE_DIR} "${SRC};${HDR}")
