Implemented geometry manipulation
Minor tweaks to 'Utility.h'.
Minor tweaks to 'GenericInterface.h'.

Moved primitive geometry to 'geometry/primitive'.
Added synchronization tracking to 'Shape'.
Added synchronization to 'Shape'.
'Shape.getBoundary()' will synchronize if necessary.
'Point.getCoordinates()' now always returns 'PointCoordinates'.

Remplemented 'Axis'.
Minor tweaks to 'Vector'.

Changes to 'ManipulatorBase'.
Consolidated translation manipulations to 'Translate'.
Added 'Rotate'.
Added 'Scale'.

Added 'noexcept' qualifiers where applicable.
Set destructors to 'default' where applicable.

Added unit tests for 'Axis', 'Translate', 'Rotate' and 'Scale'.
Tweaks to present unit tests where necessary.

NOTE:
'Rotate' currently introduces noticable numerical errors, the api rotate
function should probably be reimplemented via translate at some point.

--- a/src/geometry/manipulation/CMakeLists.txt
+++ b/src/geometry/manipulation/CMakeLists.txt
@@ -4,9 +4,9 @@
 
 # add sources
 set(SRC
-	TranslateAlongVector.cpp
-	TranslateBase.cpp
-	TranslateToPoint.cpp
+	Scale.cpp
+	Rotate.cpp
+	Translate.cpp
 	)
 
 # append to sources
