Implemented blade geometry generation
Reworked profile geometry generation, it's now modular.
Added profile selection based on camber angle (computed).
Added main geometry classes Machine, BladeRow, Blade and Airfoil.
Added computation of deviation angle.
Added diffusion checking via de Haller criterion.
Added Splines.
Added some new unit tests and the first integrated test.

Need to add missing unit tests.
Need to check the generated geometry from the integrated test.
Need to append the integrated test to be more thorough.

Need to add variable solidity via a new Solidity class.
Need to add Diffusion Factor checking (coupled with Solidity class).
Need to add CircularArc camber line generation.

Need to add Surfaces.
Need to add Airfoil wrapping (to cylinder).
Need to add Blade geometry construction (Surfaces).
Need to add CascadeSection class.

After code clean up next bigger project should be the Parser (maybe
squeeze in rudimentary mesh generation?).

--- a/src/general/CMakeLists.txt
+++ b/src/general/CMakeLists.txt
@@ -2,11 +2,11 @@
 #
 # See the LICENSE file for license information
 
+# add all subdirectories
+
 # add sources
 set(SRC
-	Rotate.cpp
-	Scale.cpp
-	Translate.cpp
+	turbo.cpp
 	)
 
 # append to sources
