Additions to blade geometry generation
Changed geometry kernel to OpenCASCADE.

Added Wires.
Added Surfaces (Surface Filling and Surface Section).

Added Airfoil geometry class:
- the physics and the geometry are separated
- geometry computations are now done via raw numbers instead of with the
  geometry itself (eg. stacking, rotation, wrapping etc.)
- minimizes the number of synchronizations

Added Circular Arc camber generation.
Added Airfoil wrapping to cylinder.
Added move constructors for some primitive geometry classes.

Need to move Blade geometry to a new class (as with Airfoil).
Need to add new unit tests.
Need to add remaining stuff listed in previous commit.
Need to clean up code (remove reduntant classes, check consistency etc.).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,6 +69,14 @@ add_executable (turbo "${PROJECT_SOURCE_DIR}/src/Main.cpp" ${TURBO_SRC})
 target_include_directories(turbo PRIVATE ${TURBO_INCLUDE_DIRS})
 target_link_libraries(turbo ${TURBO_LIBRARIES})
 
+# < new
+# main library target (for tests)
+add_library (libturbo SHARED ${TURBO_SRC})
+set_target_properties (libturbo PROPERTIES PREFIX "")
+target_include_directories(libturbo PUBLIC ${TURBO_INCLUDE_DIRS})
+target_link_libraries(libturbo ${TURBO_LIBRARIES})
+# < new
+
 # install targets
 install(TARGETS turbo DESTINATION "${PROJECT_SOURCE_DIR}/bin")
 
