--- a/src/geometry/primitive/CMakeLists.txt
+++ b/src/geometry/primitive/CMakeLists.txt
@@ -4,10 +4,14 @@
 
 # add sources
 set(SRC
+	Curve.cpp
 	Line.cpp
 	Point.cpp
 	Shape.cpp
 	Spline.cpp
+	Surface.cpp
+	SurfaceFilling.cpp
+	SurfaceSection.cpp
 	)
 
 # append to sources
