--- a/test/src/CMakeLists.txt
+++ b/test/src/CMakeLists.txt
@@ -10,13 +10,21 @@ add_compile_options(
 # append to include directories
 list(APPEND TURBO_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})
 
+# < new
+# append library
+list(APPEND TURBO_LIBRARIES "libturbo")
+# < new
+
 # add sources
 file(GLOB TEST_SRC *.cpp)
 
 # binary target
 foreach(TESTFILE ${TEST_SRC})
 	get_filename_component(FILENAME ${TESTFILE} NAME_WE)
-	add_executable(${FILENAME} "${FILENAME}.cpp" ${TURBO_SRC})
+	#add_executable(${FILENAME} "${FILENAME}.cpp" ${TURBO_SRC})
+# < new
+	add_executable(${FILENAME} "${FILENAME}.cpp")
+# < new
 	target_include_directories(${FILENAME} PRIVATE ${TURBO_INCLUDE_DIRS})
 	target_link_libraries(${FILENAME} ${TURBO_LIBRARIES})
 	set_target_properties(${FILENAME}
