Light cleanup for version tagging
Added:
- 'compute' directory
- 'geometry/profile/camber' directory
- 'geometry/profile/distribution' directory
- some comments in relevant files
- relevant CMake files

Changed:
- 'volumeFlowRate' to m3s-1 from m3h-1

Redistributed files to some new directories in prep for bigger changes.
Tagging version to sync physical notes and code because the preliminary
design procedure (algorithm) is about to be changed.

Main goals for v0.2 are as follows:
    - prep code for meshing module (meta)
    - remove redundant classes (probably 'gmsh' geometry manipulator
      classes, some typedefs etc.)
    - transform main data structures to 'meta' structures
      ('Airfoil', 'Blade', 'BladeRow', 'Machine' etc.) wherein the
      main code modules will intersect but the classes themselves
      should be free of any specializations ie. the should be as
      general as possible
	- decouple physical computations (all models, equations and
	  algorithms), should only be left with general function calls
	- decouple geometry (probably ok to leave 'gmsh' geometry, but
	  the underlying geometry data and/or computations should be
	  separate)
	- data structures within the meta structures should be revised
    - the way input data is shared within the code should probably be
      revised
    - the meta structures should be standalone (eg. 'Airfoil' shouldn't
      require 'Blade' explicitly to be used) to allow easier conversion
      to library format if so decided

--- a/src/geometry/profile/CMakeLists.txt
+++ b/src/geometry/profile/CMakeLists.txt
@@ -2,15 +2,12 @@
 #
 # See the LICENSE file for license information
 
+# add all subdirectories
+add_subdirectory(camber)
+add_subdirectory(distribution)
+
 # add sources
 set(SRC
-	CamberGeneratorBase.cpp
-	CircularArcCamber.cpp
-	ConstantDistribution.cpp
-	DistributionGeneratorBase.cpp
-	Naca2DigitCamber.cpp
-	Naca4DigitDistribution.cpp
-	Naca4DigitModifiedDistribution.cpp
 	ProfileGenerator.cpp
 	)
 
