--- a/src/compute/CMakeLists.txt
+++ b/src/compute/CMakeLists.txt
@@ -3,12 +3,13 @@
 # See the LICENSE file for license information
 
 # add all subdirectories
-add_subdirectory(general)
-add_subdirectory(geometry)
-add_subdirectory(compute)
 
 # add sources
 set(SRC
+	CarterDeviation.cpp
+	DeHallerCriterion.cpp
+	Deviation.cpp
+	McKenzieDeviation.cpp
 	)
 
 # append to sources
