Pre-build test commit
Applied data storage changes to most classes.
Refactored 'Airfoil', 'Profile' and profile generation classes.

Updated various classes to reflect the changes.

Removed some unused classes (manipulation completely) and some
specialized classes: deviation, modified NACA distribution generators
etc.

Simplified the initial design procedure/calculations and consolidated
variables.

Temporarily disabled some classes, will re-enable once unit tests are
written and the build passes.

--- a/src/design/CMakeLists.txt
+++ b/src/design/CMakeLists.txt
@@ -9,10 +9,10 @@ add_subdirectory(profile)
 # add sources
 set(SRC
 	Airfoil.cpp
-	Blade.cpp
-	BladeRow.cpp
-	ComponentBase.cpp
-	Machine.cpp
+	#Blade.cpp
+	#BladeRow.cpp
+	#Machine.cpp
+	TurboBase.cpp
 	)
 
 # append to sources
