Changes to simulation module
Fixed a bug with how stagger angle is being computed.
Added input stream operator for Vectors.

Changes to case template files and default simulation settings.

List class under construction.

--- a/src/input/vector/CMakeLists.txt
+++ b/src/input/vector/CMakeLists.txt
@@ -8,6 +8,7 @@
 set(SRC
 	BladeVelocity.cpp
 	InletVelocity.cpp
+	InletRefPoint.cpp
 	InletRelativeVelocity.cpp
 	LEMonitoringPlane.cpp
 	OutletVelocity.cpp
