Added Airfoil constraints
Added optional constraint on Airfoil max passage width.
Added optional constraint on Blade max thickness.

Added Lists.
- Proper input parsing test is missing, should be added at some point.

General tweaks and fixes.
- Added postprocessing to 'turbo_case_template'.
- Changed profile 'Distribution' to 'Thickness' (yes, much better).
- Changed how 'VortexDistributionExponent' and 'RootOutletVelocity' are
  being computed.
- Added nodiscard to 'Profile' member functions.
- Fixed a bug introduced in the previous commit with how stagger angle is
  being computed.

Some general notes:
- 'Profile' algorithms seem to be introducing a fair bit of numerical
  error while some are simply dubious.
- using splines for interpolating intermediate profile stations while
  building 'Blade' causes issues with uniform width blades. See
  'Blade.cpp' file for more info.

--- a/src/design/profile/CMakeLists.txt
+++ b/src/design/profile/CMakeLists.txt
@@ -4,7 +4,7 @@
 
 # add all subdirectories
 add_subdirectory(camber)
-add_subdirectory(distribution)
+add_subdirectory(thickness)
 
 # add sources
 set(SRC
