Added distributed RegistryObjects
Added registry objects defined via polylines (lists), which
can interpolate and return a non-distributed RegistryObject at a
specified relative radius.

- Added polylines.
- Removed aerodynamic efficiency from initial design computations,
  because we will be aiming to achieve a specified pressure rise via the
  design loops, so the efficiency won't play a role currently.
- Made most List member functions nodiscard.
- Changed the default 'p' solver to GAMG.

Started working on the design loops.
Doing incidence/stagger angle correction first.

Missing unit tests.

--- a/src/input/distributed/CMakeLists.txt
+++ b/src/input/distributed/CMakeLists.txt
@@ -3,14 +3,12 @@
 # See the LICENSE file for license information
 
 # add all subdirectories
-add_subdirectory(distributed)
-add_subdirectory(scalar)
-add_subdirectory(vector)
 
 # add sources
 set(SRC
-	InputRegistry.cpp
-	Registry.cpp
+	MaxAbsBladeThicknessDistribution.cpp
+	MaxPassageWidthDistribution.cpp
+	SolidityDistribution.cpp
 	)
 
 # append to sources
